--- a/api/templates/form5.html
+++ b/api/templates/form5.html
@@ -11,7 +11,7 @@
       <label for="movie">ID de la pelicula (Ej: as157, ns13): </label>
       <input type="text" id="movie" name="movie">
       <br>
-      <button type="submit">Preguntarbutton>
+      <button type="submit">Preguntar<button>
       <button type="button" onclick="window.location.href='/'">Home</button>
     </form>
   </body>
